css/shanti-main.css
/* ... */
.main-content .selectpicker .caret:before{ color:#5b68ce; font-size:1.62em; font-family:'shanticon'; content: '\e609'; position:absolute; top:-0.62em; right:-0.3rem; /* adjusted position for Video Edit page edits */}
.main-content .selectpicker li{ padding:0; overflow:hidden;}
.main-content .selectpicker>li>a>span.text{ padding-left:4px !important;}
.main-content .selectpicker li a{ color:#555; padding:0 1.25rem; overflow:hidden; display:block; line-height:1.75em; height:1.75em;}
.main-content .selectpicker li a,
.main-content .selectpicker li a:hover{ border:none; outline:0;}
.main-content .selectpicker li.selected a,
.main-content .selectpicker li.selected a span.text{ font-weight:bold;}
.main-content .selectpicker li.selected a .icon{ font-weight:bold;  color:#444;}
.main-content .selectpicker li:hover,
.main-content .selectpicker li:active,
.main-content .selectpicker li:hover span.text,
.main-content .selectpicker li:active span.text,
.main-content .selectpicker li a:hover,
.main-content .selectpicker li a:active,
.main-content .selectpicker li a:hover span.text,
.main-content .selectpicker li a:active span.text,
.main-content .selectpicker li.selected a:hover,
.main-content .selectpicker li.selected a:active{ color:#444; background: #eee !important;}
/*----- checkmark styles -----*/
.main-content .selectpicker>li>a .check-mark,
.main-content .selectpicker>li>a:hover .check-mark,
.main-content .selectpicker>li>a:focus .check-mark { color:#ccc;}
.main-content .selectpicker>li.selected>a .check-mark,
.main-content .selectpicker>li.selected>a:hover .check-mark,
.main-content .selectpicker>li.selected>a:focus .check-mark{ color:#444;}
.bootstrap-select.btn-group.show-tick .dropdown-menu li a .check-mark{ color:#ddd;position:absolute; right:15px; top:0.5rem; margin-top:0 !important; display:inline-block;}
.bootstrap-select.btn-group .btn .filter-option{ font-size:1em;}
.bootstrap-select.btn-group .btn .filter-option .icon,
.bootstrap-select.btn-group .btn .filter-option span{ font-weight:normal; font-size:1.18em; margin-right:0; color:#444; position:relative; top:2px;}
.bootstrap-select.btn-group .btn .filter-option em{color:#444; font-weight:normal; font-style:normal; font-size:1.06em; display:inline-block;}
.bootstrap-select.btn-group.show-tick .icon:first-child{ position:relative; top:2px;}
.bootstrap-select.form-control:not([class*='span']){ max-width:25em;}

.view-filters .bootstrap-select.form-control:not([class*='span']){ padding-right:0; width:100%;}
/*--- END selectpicker ---*/



/*--- BEGIN paging --*/
.shanti-filters { height:1.75em; margin-bottom:2rem;position:relative;top:-1rem;}
.logged-in .shanti-filters { top:-2.5rem;}

.shanti-filters table{ float:right;font-family:'museo-sans-500',helvetica,arial,sans-serif;}
.shanti-filters table tbody{ border-top: none;}
.shanti-filters td{ white-space: nowrap;}
.shanti-filters table td:nth-child(2){ width:100%;}
.shanti-filters td .label{ color:#555;font-size: 0.88em;text-transform:uppercase;letter-spacing: -0.1rem;}
.shanti-filters td .count{ font-size: 0.88em; margin-right:2rem;text-transform:capitalize;}
.shanti-filters .view-filters-mb .views-exposed-widget{ position:relative;padding-right:3rem;}
.shanti-filters .ajax-progress{ /*display: inline;*/ position:absolute;top:1.35rem;right:0;}
.form-item-sort-bef-combine .btn{ width: 15rem;}
.form-item-sort-bef-combine label{ display: none;}
.form-item-sort-bef-combine .dropdown-menu.open .disabled{ background-color: #d0d0d0;}
table.pagerer { float:right;font-size:0.88em;text-transform:uppercase;position:relative;top:0.9rem;}
input.pagerer-page{ border-radius:2px; border:none;	font-size:0.88em; padding-top: 0.15rem;line-height:1.25em;color: #6d7afc; width:2.68em !important; -webkit-box-shadow: 0 0 3px rgba(50, 50, 50, 0.4);box-shadow: 0 0 3px rgba(50, 50, 50, 0.4);border-collapse: separate;background-clip: padding-box;}
.pagerer-page:focus{background:#fff;color: rgba(32, 132, 131, 0.71);}
.pager{ text-align:right;float:right;position:relative;top:-1rem;right:1rem;}
.pager li{ color:#555; padding:0 1px; line-height:1em; font-family:'museo-sans-700',helvetica,arial,sans-serif;}
.pager li>a{ border:none;color:#aaa;padding:0.12em 0.5em;margin:0;background:transparent;border-radius:0.18em;background-clip: padding-box;	display:inline-block;position:relative;top:0;}
.pager li>a:hover,
.pager li>a:focus{ color:#333;-webkit-box-shadow: 0 0 3px rgba(50, 50, 50, 0.4);box-shadow: 0 0 3px rgba(50, 50, 50, 0.4);border-collapse: separate;}
.pager li>a:active{ -webkit-box-shadow:none;box-shadow:none;}
.pager li>a .icon{ color:#999; position:relative; top: 0;}
.pager li>a:hover .icon,
.pager li>a:focus .icon{ color:#444;}
.pager .pager-first>a,
.pager .pager-last>a{ position:relative; top: 0.1rem;}
.pager .pager-last>a{ margin-right:1rem;}
.pager-first .icon,
.pager-previous .icon,
.pager-next .icon,
.pager-last .icon{ font-family:'shanticon';height:1em;width:1em;font-size:1em;color:#222;display:inline-block;background:transparent;}
.pager-first .icon:before{ content:'\e63d';}
.pager-previous .icon:before { content:'\e640';}
.pager-next .icon:before { content:'\e63f';}
.pager-last .icon:before { content:'\e63e';}
.pager .icon:before{ position:relative;top:0.1rem;}
.pager-first .icon,
.pager-last .icon{ font-size:1.25em;}
.pager-next{ margin-left:.5rem;}
.pager-previous{ margin-right:.5rem;}
/*--- END paging --*/




/***** BEGIN System Messages *****/
.content-section > .messages{ padding:0; border:none !important;}
.messages{ margin:0.32em 0 0.5em; padding:0; border:none;-webkit-box-shadow:0 0 3px #ccc;box-shadow:0 0 3px #ccc;border-collapse: separate;}
.messages ul{ margin: 0 0 0 1em; /* LTR */padding: 0;}
.messages ul li{ list-style-image: none !important;}
.messages > div{ padding: 10px 20px 10px 45px; background-position: 8px 8px;}
.messages a{ font-weight:bold;}
.messages a:hover{}
/* ... */

